@@ -1150,7 +1150,7 @@ void compare_db(list* new,db_config* dbconf)
 	  check_list_for_match(dbconf->equrxlst,old->filename,&tempignore)) &&
 	 !check_list_for_match(dbconf->negrxlst,old->filename,&tempignore)){
 	if(!(dbconf->action&DO_INIT)){
-	  error(2,_("WARNING: Old db contains a file that shouldn\'t be there, run --init or --update\n"));
+	  error(2,_("WARNING: Old db contains a entry that shouldn\'t be there, run --init or --update\n"));
 	}
 	initdbwarningprinted=1;
       }
@@ -1160,7 +1160,7 @@ void compare_db(list* new,db_config* dbconf)
       int localignorelist=old->attr ^ ((db_line*)r->data)->attr;
       
       if ((localignorelist&(~(DB_NEWFILE|DB_RMFILE)))!=0) {
-	error(2,"File %s in databases has different attributes, %llx,%llx\n",
+	error(2,"Entry %s in databases has different attributes, %llx,%llx\n",
               old->filename,old->attr,((db_line*)r->data)->attr);
       }
       
