@@ -1,3 +1,6 @@
+2010-06-04	Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Replaced 'File' by 'Entry' in database warnings
+
 2010-06-03	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Added missing space and new line to "Error in selective regexp" message,
 	  fixes bug 1944700
